--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     alias(libs.plugins.androidApplication)
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -39,6 +40,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation "androidx.room:room-runtime:2.5.2"
+    implementation 'com.google.firebase:firebase-database:20.3.0'
     annotationProcessor "androidx.room:room-compiler:2.5.2"
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
